--- a/main.html
+++ b/main.html
@@ -8,6 +8,8 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<img src="#movie.png" class="moviePic"  alt="Movie Poster">
+	<p class="movieDetail">Lorem</p>
     <script type="text/javascript" src="./script.js">
 </script>
 
